tests/paczka1/small_fuzzy/95899479.err
Error in line 1: ZZcBwlFYCp A499 2,2
Error in line 2: ZZcBwlFYCp S471 35,9
Error in line 4: ZZcBwlFYCp A459 39,6
Error in line 8: ZZcBwlFYCp A499 57,8
